--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
-    "start": "PORT=4101 next start",
+    "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
