--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,19 +6,16 @@
     {
       "src": "./icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "./icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ],
   "start_url": "/",
   "display": "standalone",
   "background_color": "#FFF5F4",
-  "theme_color": "#F44336",
-  "scope": "/"
+  "theme_color": "#F44336"
 }
