--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
-    "start": "PORT=4101 next start",
+    "start": "next start -p 4101",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
@@ -47,8 +47,6 @@
     "genkit": "^1.8.0",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
-    "next-pwa": "^5.6.0",
-    "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
