--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@stripe/stripe-js": "^4.1.0",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
     "buffer": "^6.0.3",
@@ -53,6 +54,7 @@
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "stream-browserify": "^3.0.0",
+    "stripe": "^16.2.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
