--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
     "genkit": "^1.8.0",
+    "immer": "^10.1.1",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "react": "^18.3.1",
