--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
+    "firebase-admin": "^12.2.0",
     "genkit": "^1.8.0",
     "immer": "^10.1.1",
     "lucide-react": "^0.475.0",
